--- a/boy.html
+++ b/boy.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="bar.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,9 +10,11 @@
   <svg id="svg">
     <polygon id="area1"/>
     <polygon id="area2"/>
+    <line id="bar"/>
   </svg>
 </div>
 <div id="gameover">
 </div>
+<script src="bar.js"></script>
 </body>
 </html>
