First stage Game

--- a/boy.html
+++ b/boy.html
@@ -9,6 +9,7 @@
 <div id="game">
   <svg id="svg">
     <polygon id="area1"/>
+    <rect id="square" width="50" height="50"/>
     <polygon id="area2"/>
     <line id="bar"/>
   </svg>
