--- a/boy.html
+++ b/boy.html
@@ -20,9 +20,17 @@
       <polygon id="area2"/>
       <line id="bar"/>
     </svg>
+    <p id="timeleft">Time left:</p>
+    <p id="time"></p>
+    <p id="scoreNotification">+1</p>
+    <p id="scoreTracker"></p>
   </div>
   <div id="gameover">
-    <p id="score"></p>
+    <div id="gowrapper">
+      <p>You scored</p>
+      <p id="score"></p>
+      <button id="reset">Reset</button>
+    </div>
   </div>
 <script src="bar.js"></script>
 </body>
