--- a/boy.html
+++ b/boy.html
@@ -29,7 +29,14 @@
     <div id="gowrapper">
       <p>You scored</p>
       <p id="score"></p>
-      <button id="reset">Reset</button>
+      <button id="reset">
+        <span>Reset</span>
+        <!-- SVG taken from material.io at https://material.io/tools/icons/?icon=replay&style=baseline -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" id="resetIcon">
+          <path d="M0 0h24v24H0z" fill="none"/>
+          <path d="M12 5V1L7 6l5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"/>
+        </svg>
+      </button>
     </div>
   </div>
 <script src="bar.js"></script>
